add: works30 webgl text

--- a/src/works30/index.html
+++ b/src/works30/index.html
@@ -34,21 +34,15 @@
           >X</a
         >
       </li>
-      <li class="header__item">
-        <a
-          href=""
-          class="header__link"
-          target="_blank"
-          rel="noopener noreferrer"
-          >reference</a
-        >
-      </li>
     </ul>
   </header>
   <div class="webgl"></div>
   <main>
     <div class="mv js-mv">
-      <h2 class="mv__title">WebGL<br>Lens Refraction</h2>
+      <div class="mv__desc">
+        <h2 class="mv__title js-mv-title"><span>WebGL</span><span>Lens Refraction</span></h2>
+      </div>
+      <div class="mv__image"><img src="./src/images/mv.jpg" alt=""></div>
     </div>
   </main>
   <script type="module" src="./src/ts/app.ts"></script>
