--- a/src/works30/index.html
+++ b/src/works30/index.html
@@ -42,7 +42,7 @@
       <div class="mv__desc">
         <h2 class="mv__title js-mv-title"><span>WebGL</span><span>Lens Refraction</span></h2>
       </div>
-      <div class="mv__image"><img src="./src/images/mv.jpg" alt=""></div>
+      <div class="mv__image"><img src="./src/images/mv.jpg" alt="" class="js-image"></div>
     </div>
   </main>
   <script type="module" src="./src/ts/app.ts"></script>
