--- a/src/works30/index.html
+++ b/src/works30/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./src/css/style.css" />
   <title>WebGL Works | 030 | Lens Refraction</title>
 </head>
-<body>
+<body class="w-30">
   <header class="header">
     <h1 class="header__title">
       <span class="header__title__number">030</span>Lens Refraction
