fix: works21 css

--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -39,7 +39,7 @@
     </header>
     <main>
       <div class="webgl"></div>
-      <div class="wrapper">
+      <div class="wrapper w-21">
         <ul class="list">
           <li class="item">
             <a
