--- a/src/works30/index.html
+++ b/src/works30/index.html
@@ -27,7 +27,7 @@
       </li>
       <li class="header__item">
         <a
-          href=""
+          href="https://x.com/taic_dev_/status/1887530763643654568"
           class="header__link"
           target="_blank"
           rel="noopener noreferrer"
