--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,12 @@
       </div>
       <ul class="list">
         <li class="item">
+          <span class="item-number">034</span>
+          <a class="item-link" href="https://taic-dev.github.io/webgl-works-34/">
+            <img class="item-image" src="./assets/images/works34.png" alt="">
+          </a>
+        </li>
+        <li class="item">
           <span class="item-number">033</span>
           <a class="item-link" href="https://taic-dev.github.io/webgl-works-33/">
             <img class="item-image" src="./assets/images/works33.png" alt="">
